k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-application
  namespace: monitoring
  labels:
    app: flask-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-application
  template:
    metadata:
      labels:
        app: flask-application
    spec:
      containers:
      - name: flask-application
        image: rafay7655/flask-api:latest
        ports:
        - name: web
          containerPort: 8080
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
